index file updated

--- a/VS Code Clone/index.html
+++ b/VS Code Clone/index.html
@@ -39,7 +39,16 @@
     </div>
     
     <!-- hero section  -->
-    <section class="bg-[#2c2c32] h-64">
+    <section class="bg-[#2c2c32] h-full flex">
+        <div class="text-white mx-auto pt-12">
+            <h1 class="text-5xl antialiased font-extralight">Code Editing.</h1>
+            <h1 class="text-5xl font-bold">Redefined.</h1>
+            <p class="font-extralight text-gray-300 mt-8">Free. Built on open source. Runs everywhere. </p>
+
+        </div>
+        <div class="">
+            <img src="assets/vscode_screenshot.png" alt="">
+        </div>
 
     </section>
 
