index file updated

--- a/VS Code Clone/index.html
+++ b/VS Code Clone/index.html
@@ -44,6 +44,13 @@
             <h1 class="text-5xl antialiased font-extralight">Code Editing.</h1>
             <h1 class="text-5xl font-bold">Redefined.</h1>
             <p class="font-extralight text-gray-300 mt-8">Free. Built on open source. Runs everywhere. </p>
+            <div class="flex space-x-1 pt-2">
+                <div class="bg-blue-700 text-center py-2 px-4 ">
+                    <p class=" text-xl">Download Mac Universal</p>
+                    <p class="font-extralight text-base">Stable Build</p>
+                </div>
+                <div class="bg-blue-700"><img class="h-8" src="assets/download.svg" alt=""></div>
+            </div>
 
         </div>
         <div class="">
