--- a/VS Code Clone/index.html
+++ b/VS Code Clone/index.html
@@ -44,13 +44,19 @@
             <h1 class="text-5xl antialiased font-extralight">Code Editing.</h1>
             <h1 class="text-5xl font-bold">Redefined.</h1>
             <p class="font-extralight text-gray-300 mt-8">Free. Built on open source. Runs everywhere. </p>
-            <div class="flex space-x-1 pt-2">
+            <div class="flex space-x-1 pt-2 hover:pointer">
                 <div class="bg-blue-700 text-center py-2 px-4 ">
                     <p class=" text-xl">Download Mac Universal</p>
                     <p class="font-extralight text-base">Stable Build</p>
                 </div>
                 <div class="bg-blue-700"><img class="h-8" src="assets/download.svg" alt=""></div>
+                
             </div>
+            <div class="px-2 py-2 bg-gray-800 text-gray-300">
+                <p><a class="text-blue-800" href="#">Web</a>, <a class="text-blue-800" href="#">Insiders edition</a>, or <a class="text-blue-800" href="#">other platforms</a></p>
+            </div>
+            <p>By using VS Code, you agree to its</p>
+            <p><a href="#">license and privacy statement</a></p>
 
         </div>
         <div class="">
