index file modified, first section

--- a/VS Code Clone/index.html
+++ b/VS Code Clone/index.html
@@ -53,10 +53,10 @@
                 
             </div>
             <div class="px-2 py-2 bg-gray-800 text-gray-300">
-                <p><a class="text-blue-800" href="#">Web</a>, <a class="text-blue-800" href="#">Insiders edition</a>, or <a class="text-blue-800" href="#">other platforms</a></p>
+                <p><a class="text-blue-500" href="#">Web</a>, <a class="text-blue-500" href="#">Insiders edition</a>, or <a class="text-blue-500" href="#">other platforms</a></p>
             </div>
-            <p>By using VS Code, you agree to its</p>
-            <p><a href="#">license and privacy statement</a></p>
+            <p class="font-extralight">By using VS Code, you agree to its</p>
+            <p class="font-thin"><a class="text-blue-500" href="#">license and privacy statement</a></p>
 
         </div>
         <div class="">
