--- a/VS Code Clone/index.html
+++ b/VS Code Clone/index.html
@@ -9,7 +9,7 @@
 <body class="font-sans">
     <!-- Navigation bar -->
     <!-- Brand -->
-    <nav class="bg-[#2c2c32] text-white flex" >
+    <nav class="bg-[#2c2c32] text-white flex fixed shadow-m" >
         <div class="flex justify-between">
             <img class="h-10 ml-2 px-2  pt-4" src="assets/vscode.png" alt="logo">
             <h class="text-2xl ml-4 py-2">Visual Studio Code</h2>
@@ -64,6 +64,27 @@
         </div>
         <div class="">
             <img src="assets/vscode_screenshot.png" alt="">
+        </div>
+
+    </section>
+
+    <!-- section 2 -->
+    <section class="flex space-x-12 items-center px-32 mt-8">
+        <div class="hover:cursor-pointer hover:bg-gray-300">
+            <img src="assets/Intellisense.png" alt="">
+            <h2>IntelliSense</h2>
+        </div>
+        <div class="hover:cursor-pointer hover:bg-gray-300">
+            <img src="assets/Run and debug.png" alt="">
+            <h2>Run and Debug</h2>
+        </div>
+        <div class="hover:cursor-pointer hover:bg-gray-300">
+            <img src="assets/Git.png" alt="">
+            <h2>Built in Git</h2>
+        </div>
+        <div class="hover:cursor-pointer hover:bg-gray-300">
+            <img src="assets/Extensions.png" alt="">
+            <h2>Extensions</h2>
         </div>
 
     </section>
